# AI-Hedge-Fund-Stock-Predictor

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: backtester.py  main.py  webapp.py
src/agents/: quantitative_analyst.py
src/llm/: models.py
