[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "0.3.0"
langchain-anthropic = "0.3.5"
langchain-groq = "0.2.3"
langchain-openai = "^0.3.5"
langchain-deepseek = "^0.1.2"
langgraph = "0.2.56"
pandas = "^2.1.0"
numpy = "^1.24.0"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"
colorama = "^0.4.6"
questionary = "^2.1.0"
rich = "^13.9.4"
langchain-google-genai = "^2.0.11"
streamlit = "^1.35.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.0"
yfinance = "^0.2.30"
pandas-ta = "^0.3.14b0"
plotly = "^5.15.0"
statsmodels = "^0.14.0"
xgboost = "^2.0.0"
lightgbm = "^4.0.0"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.0"
keras = "^3.0.0"
tensorflow = "^2.15.0"
ta = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 420
target-version = ['py39']
include = '\.pyi?$'